# platform.core.multimedia.libmm-session

./: AUTHORS  Makefile.am  configure  configure.ac  mm-session.pc.in  mm_session.c  mm_session.h  mm_session_private.h  project.config
TC/: tet_scen
TC/utc/: Makefile  tet_captured  tslist  utc_mm_session_common.h  utc_mm_session_finish_func.c  utc_mm_session_init_ex_func.c  utc_mm_session_init_func.c
debian/: changelog  control  libmm-session-0.install.in  libmm-session-dev.install.in  libmm-session-sdk-dev.install.in  rules
packaging/: libmm-session.changes  libmm-session.spec
